# server_monitor

./: .gitignore  LICENSE  README.md  build_deb.sh  build_exe.bat  buildozer.spec  config.json  file_version_info.txt  main.py  pyproject.toml  requirements.txt  server_monitor.py  setup.bat  setup.py  setup.sh  stdeb.cfg
.github/: release.yml
.github/workflows/: python-app.yml
monitor_core/: __init__.py  stats.py  utils.py
scripts/: build-linux.sh  build-win.ps1
static/: dashboard.js  output.css  style.css
static/js/: dashboard.js
templates/: dashboard.html
