[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "server-monitor"
version = "1.0.2"
authors = [
  { name="KJAYDev", email="jakelenjalen@gmail.com" },
]
description = "A professional cross-platform server monitoring dashboard with a desktop GUI."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Monitoring",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "flask>=3.0.0",
    "flask-socketio>=5.3.0",
    "gevent>=24.0.0",
    "gevent-websocket>=0.10.1",
    "waitress>=3.0.0",
    "psutil>=6.0.0",
    "gputil>=1.4.0",
    "pywebview>=5.0.0",
    "pyghmi>=1.6.15",
    "pythonnet>=3.0.3"
]

[project.urls]
"Homepage" = "https://github.com/jakelen61732/server_monitor"
"Bug Tracker" = "https://github.com/jakelen61732/server_monitor/issues"
"Source Code" = "https://github.com/jakelen61732/server_monitor"

[tool.setuptools]
include-package-data = true
